2012-03-14  Chris Fleizach  <cfleizach@apple.com>

        AX: ARIA tables need to support selected rows attribute/select rows changed notification
        https://bugs.webkit.org/show_bug.cgi?id=79821

        Reviewed by Beth Dakin.

        * DumpRenderTree/AccessibilityUIElement.cpp:
        (rowAtIndexCallback):
        (AccessibilityUIElement::getJSClass):
        * DumpRenderTree/AccessibilityUIElement.h:
        (AccessibilityUIElement):
        * DumpRenderTree/blackberry/AccessibilityUIElementBlackBerry.cpp:
        (AccessibilityUIElement::rowAtIndex):
        * DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
        (AccessibilityUIElement::rowAtIndex):
        * DumpRenderTree/mac/AccessibilityUIElementMac.mm:
        (AccessibilityUIElement::rowAtIndex):
        * DumpRenderTree/win/AccessibilityUIElementWin.cpp:
        (AccessibilityUIElement::rowAtIndex):

2012-03-14  Tim Horton  <timothy_horton@apple.com>

        NRWT should respect --additional-platform-directory's Skipped list
        https://bugs.webkit.org/show_bug.cgi?id=81172

        Reviewed by Timothy Hatcher.

        Respect the Skipped file inside all paths included via the --additional-platform-directory option. Test results
        from said path are already used, but the Skipped file is ignored.

        * Scripts/webkitpy/layout_tests/port/webkit.py:
        (WebKitPort._skipped_file_search_paths):
        * Scripts/webkitpy/layout_tests/port/webkit_unittest.py:
        (test_skipped_file_search_paths):

2012-03-14  Ojan Vafai  <ojan@chromium.org>

        Unreviewed, rolling out r110783.
        http://trac.webkit.org/changeset/110783
        https://bugs.webkit.org/show_bug.cgi?id=81054

        Caused existing test expectation lines to expand to one for
        each test configuration.

        * Scripts/webkitpy/layout_tests/models/test_expectations.py:
        (TestExpectations.has_warnings):
        * Scripts/webkitpy/layout_tests/models/test_expectations_unittest.py: